added a new line

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Github practice</h1>
+    <h2>githb part2</h2>
     <!-- script file -->
     <script src="script.js"></script>
 </body>
